--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.1.0",
-        "nodemon": "^2.0.22",
-        "serverless-http": "^3.2.0"
+        "nodemon": "^2.0.22"
     }
 }
